--- a/requirements.txt
+++ b/requirements.txt
@@ -1,135 +1,10 @@
-absl-py==1.2.0
-aniso8601==9.0.1
-antlr4-python3-runtime==4.9.3
-apturl==0.5.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.5.2
-asttokens==2.0.8
-astunparse==1.6.3
-async-generator==1.10
-attrs==22.1.0
-backcall==0.2.0
-bcrypt==3.2.0
-beautifulsoup4==4.11.1
-black==22.3.0
-bleach==5.0.1
-blinker==1.4
-Brlapi==0.8.3
-cachetools==5.2.0
-certifi==2022.9.24
-cffi==1.15.1
-chardet==4.0.0
-charset-normalizer==2.1.1
-click==8.0.4
-cloudpickle==2.2.0
-colorama==0.4.4
-command-not-found==0.3
-comtypes==1.1.14
-convenience==0.2
-cryptography==3.4.8
-cupshelpers==1.0
-cvzone==1.5.6
-cycler==0.11.0
-Cython==0.29.32
-dataclasses==0.6
-dbus-python==1.2.18
-debugpy==1.6.3
-decorator==5.1.1
-deepface==0.0.75
-defer==1.0.6
-defusedxml==0.7.1
-# Editable install with no version control (detectron2==0.6)
--e /home/shahzain/Documents/GitHub/Image Segmentation/detectron2
-distlib==0.3.4
-distro==1.7.0
-distro-info===1.1build1
 Django==4.1.1
 djangorestframework==3.13.1
-dnspython==2.2.1
-docopt==0.6.2
-duplicity==0.8.21
-entrypoints==0.4
-enum-compat==0.0.3
-exceptiongroup==1.0.0rc9
-executing==1.0.0
 face-recognition-models==0.3.0
-fairscale==0.4.9
-fasteners==0.14.1
-fastjsonschema==2.16.1
-filelock==3.6.0
-fire==0.4.0
 Flask==2.2.2
 Flask-Cors==3.0.10
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
-flatbuffers==2.0.7
-fonttools==4.37.1
-future==0.18.2
-fvcore==0.1.5.post20220512
-gast==0.4.0
-gdown==4.5.1
-google-auth==2.11.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-greenlet==1.1.3
-grpcio==1.48.1
-gunicorn==20.1.0
-h11==0.14.0
-h5py==3.7.0
-httplib2==0.20.2
-hydra-core==1.2.0
-idna==3.3
-imageio==2.22.0
-imantics==0.1.12
-imgaug==0.4.0
-importlib-metadata==4.12.0
-imutils==0.5.4
-iopath==0.1.9
-ipykernel==6.15.3
-ipython==8.5.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.2
-itsdangerous==2.1.2
-jedi==0.18.1
-jeepney==0.7.1
-Jinja2==3.1.2
-joblib==1.1.0
-jsonschema==4.16.0
-jupyter==1.0.0
-jupyter-console==6.4.4
-jupyter-core==4.11.1
-jupyter_client==7.3.5
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.3
-keras==2.8.0
-Keras-Preprocessing==1.1.2
-keyring==23.5.0
-kiwisolver==1.4.4
-labelme2coco==0.2.1
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-libclang==14.0.6
-lockfile==0.12.2
-louis==3.20.0
-lxml==4.9.1
-macaroonbakery==1.3.1
-Mako==1.1.3
-Markdown==3.4.1
-MarkupSafe==2.1.1
-matplotlib==3.5.3
-matplotlib-inline==0.1.6
-mediapipe==0.8.10.1
-mistune==2.0.4
-monotonic==1.6
-more-itertools==8.10.0
-mtcnn==0.1.1
-mypy-extensions==0.4.3
-nbclient==0.6.8
-nbconvert==7.0.0
-nbformat==5.5.0
 nest-asyncio==1.5.5
 netifaces==0.11.0
 networkx==2.8.6
@@ -140,136 +15,4 @@ olefile==0.46
 omegaconf==2.2.3
 opencv-contrib-python==4.6.0.66
 opencv-python==4.6.0.66
-opt-einsum==3.3.0
-outcome==1.2.0
-packaging==21.3
-pandas==1.4.4
-pandocfilters==1.5.0
-paramiko==2.9.3
-parso==0.8.3
-pathspec==0.10.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.2.0
-pipenv==11.9.0
-pipreqs==0.4.11
-pixellib==0.7.1
-platformdirs==2.5.1
-plotly==5.10.0
-portalocker==2.5.1
-prometheus-client==0.14.1
-prompt-toolkit==3.0.31
-protobuf==3.19.4
-psutil==5.9.1
-psycopg2==2.9.3
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pybboxes==0.1.4
-pycairo==1.20.1
-pycaw==20220416
-pycocotools==2.0.4
-pycodestyle==2.8.0
-pycparser==2.21
-pycups==2.0.1
-pydot==1.4.2
-Pygments==2.13.0
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==3.0.9
-PyQt5==5.15.7
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.0
-pyRFC3339==1.1
-pyrsistent==0.18.1
-PySocks==1.7.1
-python-apt==2.3.0+ubuntu2.1
-python-dateutil==2.8.2
-python-debian===0.1.43ubuntu1
-pyttsx3==2.90
-pytz==2022.1
-PyWavelets==1.4.1
-pyxdg==0.27
-PyYAML==5.4.1
-pyzmq==24.0.0
-qtconsole==5.3.2
-QtPy==2.2.0
-reportlab==3.6.8
-requests==2.28.1
-requests-oauthlib==1.3.1
-retina-face==0.0.12
-rsa==4.9
-sahi==0.10.5
-scikit-image==0.19.3
-scikit-learn==1.1.2
-scipy==1.9.1
-screen-resolution-extra==0.0.0
-seaborn==0.12.0
-SecretStorage==3.3.1
-selenium==4.5.0
-Send2Trash==1.8.0
-serialization==1.2.3
-Shapely==1.8.4
-six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-SQLAlchemy==1.4.41
-sqlparse==0.4.2
-stack-data==0.5.0
-systemd-python==234
-tabulate==0.8.10
-tenacity==8.0.1
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0
-tensorflow-estimator==2.10.0
-tensorflow-gpu==2.8.0
-tensorflow-io-gcs-filesystem==0.27.0
-termcolor==2.0.1
-terminado==0.15.0
-terminaltables==3.1.10
-tf-estimator-nightly==2.8.0.dev2021122109
-thop==0.1.1.post2209072238
-threadpoolctl==3.1.0
-tifffile==2022.8.12
-timm==0.6.7
-tinycss2==1.1.1
-toml==0.10.2
-tomli==2.0.1
-torch==1.11.0+cpu
-torchaudio==0.11.0+cpu
-torchvision==0.12.0+cpu
-tornado==6.2
-tqdm==4.64.1
-traitlets==5.3.0
-trio==0.22.0
-trio-websocket==0.9.2
-typing_extensions==4.3.0
-ubuntu-advantage-tools==27.10
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.12
-usb-creator==0.3.7
-virtualenv==20.13.0+ds
-virtualenv-clone==0.3.0
-wadllib==1.3.6
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.2.2
-widgetsnbextension==4.0.3
-wrapt==1.14.1
-wsproto==1.2.0
-xdg==5
-xkit==0.0.0
-xmljson==0.2.1
-yacs==0.1.8
-yarg==0.1.9
-yolov4==3.2.0
-zipp==3.8.1
-zope.interface==5.4.0
+deepface
